loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:9: error: not found: value nbrB
  if (nbrB >= 3) {
      ^