loopdowhile.Poucet2.scala.code
while (!sortieTrouvee()) {
	do {
  	var nbrB:Int = 0
  	avance()
   	if (estSurBiscuit()) {
      nbrB = nbrB + 1
    }
} while (!crossing())
  if (nbrB >= 3) {
    gauche()
  }
  else {
    droite()
  }

}
avance()
